--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,14 @@
 	<packaging>jar</packaging>
 
 	<name>handler-oidc</name>
-	<url>http://maven.apache.org</url>
+	<!-- <url>http://maven.apache.org</url> -->
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	<repositories>
 		<repository>
@@ -23,25 +27,60 @@
 			</releases>
 			<id>wso2-nexus</id>
 			<name>WSO2 internal Repository</name>
-			<url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
+			<url>https://maven.wso2.org/nexus/content/groups/wso2-public/</url>
 		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.synapse</groupId>
 			<artifactId>synapse-core</artifactId>
-			<version>3.0.1</version>
+			<version>4.0.0-wso2v71</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bitbucket.b_c</groupId>
 			<artifactId>jose4j</artifactId>
-			<version>0.7.2</version>
+			<version>0.9.4</version>
 		</dependency>
 	</dependencies>
+	<pluginRepositories>
+	  <pluginRepository>
+		<releases>
+		  <enabled>true</enabled>
+		  <updatePolicy>daily</updatePolicy>
+		  <checksumPolicy>ignore</checksumPolicy>
+		</releases>
+		<id>wso2-nexus</id>
+		<url>https://maven.wso2.org/nexus/content/groups/wso2-public/</url>
+	  </pluginRepository>
+	</pluginRepositories>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.4.1</version>
+				<executions>
+				  <execution>
+					<id>enforce-maven</id>
+					<goals>
+					  <goal>enforce</goal>
+					</goals>
+					<configuration>
+					  <rules>
+						<requireMavenVersion>
+						  <version>3.8.0</version>
+						</requireMavenVersion>
+					  </rules>
+					</configuration>
+				  </execution>
+				</executions>
+			  </plugin>
+		</plugins>
+	</build>
 </project>
