--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,3 +44,5 @@ jobs:
 
     - name: Add to repository
       run: mvn -B deploy --file pom.xml
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
